# basebuilder

examples/haskell/: Main.hs  Procfile  hello.cabal
haskell/: Dockerfile  deploy  install
